# plumb

./: .gitignore  .nvim.lua  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  flake.nix  shell.nix
contrib/nvim/: README.plumb
contrib/nvim/lua/plumb/: codelens.lua  graph.lua  search.lua
contrib/nvim/tests/: codelens_e2e.lua  codelens_position_e2e.lua  graph_e2e.lua  search_e2e.lua
crates/plumb-core/: Cargo.toml
crates/plumb-core/src/: analysis.rs  lib.rs  lossless.rs  parser.rs  syntax.rs
crates/plumb-core/tests/: lossless_properties.proptest-regressions  lossless_properties.rs  lossless_tokens.rs  project_documents.rs  strict_corpus.rs
crates/plumb-core/tests/fixtures/: strict-parser.json
crates/plumb-edit/: Cargo.toml
crates/plumb-edit/src/: lib.rs
crates/plumb-export/: Cargo.toml
crates/plumb-export/src/: main.rs
crates/plumb-extensions/: Cargo.toml
crates/plumb-extensions/src/: citations.rs  document.rs  emphasis.rs  headings.rs  inline_styles.rs  lib.rs  lists.rs  math.rs  metadata.rs  queries.rs  quotes.rs  tasks.rs
crates/plumb-format/: Cargo.toml
crates/plumb-format/src/: lib.rs  main.rs
crates/plumb-import/: Cargo.toml
crates/plumb-import/src/: lib.rs
crates/plumb-ls/: Cargo.toml
crates/plumb-ls/src/: lib.rs  main.rs  position.rs  search.rs  server.rs
crates/plumb-ls/tests/: cli.rs  stdio.rs
crates/plumb-notes/: Cargo.toml
crates/plumb-notes/src/: interactive.rs  main.rs  tasks.rs
crates/plumb-web/: Cargo.toml
crates/plumb-web/assets/: app.js  index.html  note.html  styles.css
crates/plumb-web/src/: lib.rs  model.rs  pandoc.rs  server.rs  site.rs
crates/plumb-workspace/: Cargo.toml
crates/plumb-workspace/src/: lib.rs
dev/: nvim.lua
docs/: extensions.plumb  features.dj  features.md  features.plumb  index.plumb  inline.md  inline.plumb  requirements.dj  requirements.md  requirements.plumb  spec.dj  spec.md  spec.plumb  syntax-open-questions.plumb  toolchain.plumb  vision.dj  vision.md  vision.plumb
docs/architecture/: editing.plumb  extension-system.plumb  overview.plumb  syntax-tree.plumb
docs/guide/: extensions.plumb  syntax.plumb  toolchain.plumb
docs/history/: djot-tools-audit.plumb  syntax-decisions.plumb
docs/project/: roadmap.plumb  tasks.plumb  vision.plumb
docs/reference/: core-syntax.plumb  diagnostics.plumb  standard-extensions.plumb
examples/: index.plumb  metadata-scratch.plumb  plumb-export.plumb  plumb-ls.plumb  plumb-notes.plumb
skills/plumb-markup/: SKILL.md
skills/plumb-markup/agents/: openai.yaml
skills/plumb-markup/references/: core-syntax.md  standard-extensions.md
tree-sitter-plumb/: .envrc  .gitignore  Cargo.toml  README.md  README.plumb  binding.gyp  build-parser.sh  default.nix  grammar.js  package-lock.json  package.json  shell.nix  tree-sitter.json
tree-sitter-plumb/bindings/node/: binding.cc  index.d.ts  index.js  smoke-test.js
tree-sitter-plumb/bindings/rust/: build.rs  lib.rs
tree-sitter-plumb/queries/: folds.scm  highlights.scm  indents.scm  injections.scm  textobjects.scm
tree-sitter-plumb/src/: grammar.json  node-types.json  parser.c  scanner.c
tree-sitter-plumb/test/corpus/: blocks.txt  continuations.txt  errors.txt  inlines.txt
tree-sitter-plumb/test/fixtures/: highlights.plumb
