[workspace]
resolver = "2"
members = [
  "crates/plumb-core",
  "crates/plumb-extensions",
  "crates/plumb-workspace",
  "crates/plumb-ls",
  "crates/plumb-export",
]

[workspace.package]
version = "0.2.1-dev"
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
