[workspace]
resolver = "2"
members = [
  "crates/plumb-core",
  "crates/plumb-edit",
  "crates/plumb-format",
  "crates/plumb-extensions",
  "crates/plumb-workspace",
  "crates/plumb-ls",
  "crates/plumb-export",
  "crates/plumb-notes",
]

[workspace.package]
version = "0.11.1-dev"
edition = "2021"
license = "MIT"

[workspace.dependencies]
cel = "0.13"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4.5", features = ["derive"] }
comfy-table = "7.2.2"
crossterm = "0.29"
shlex = "1.3"
skim = "0.10.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
unicode-width = "0.2"
url = "2.5"
