[package]
name = "plumb-import"
version.workspace = true
edition.workspace = true
license.workspace = true
autobins = false

[lib]
path = "src/lib.rs"

[dependencies]
pandoc_types.workspace = true
plumb-core = { path = "../plumb-core" }
plumb-format = { path = "../plumb-format" }
serde_json.workspace = true
