[package]
name = "plumb"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
plumb-core = { path = "../plumb-core" }
plumb-export = { path = "../plumb-export" }
plumb-extensions = { path = "../plumb-extensions" }
plumb-format = { path = "../plumb-format" }
plumb-import = { path = "../plumb-import" }
plumb-notes = { path = "../plumb-notes" }
plumb-workspace = { path = "../plumb-workspace" }
async-lsp = { version = "0.2.4", features = ["tokio"] }
chrono.workspace = true
futures = { version = "0.3", default-features = false, features = ["async-await", "std"] }
lsp-types = "0.95"
serde_json.workspace = true
serde.workspace = true
tokio = { version = "1", features = ["io-std", "io-util", "macros", "net", "rt", "time"] }
tower = "0.5"
tracing = "0.1"
tracing-subscriber = "0.3"
