[package]
name = "plumb-notes"
version.workspace = true
edition.workspace = true
license.workspace = true
autobins = false

[lib]
path = "src/main.rs"

[dependencies]
cel.workspace = true
chrono.workspace = true
clap.workspace = true
comfy-table.workspace = true
crossterm.workspace = true
plumb-core = { path = "../plumb-core" }
plumb-extensions = { path = "../plumb-extensions" }
plumb-workspace = { path = "../plumb-workspace" }
shlex.workspace = true
skim.workspace = true
