[package]
name = "plumb-workspace"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cel.workspace = true
chrono.workspace = true
plumb-core = { path = "../plumb-core" }
plumb-extensions = { path = "../plumb-extensions" }
plumb-format = { path = "../plumb-format" }
